[FIX] Dark mode gradient

--- a/source/app/static/assets/css/dark-theme.css
+++ b/source/app/static/assets/css/dark-theme.css
@@ -1,5 +1,6 @@
 body {
-    background: #010409;
+	background: rgba(0,0,0,1);
+	background: radial-gradient(circle at center 200%, rgb(4, 24, 85) 0%,rgb(0, 0, 0) 70%, rgb(0, 0, 0) 100%);
 }
 
 body .main-header {
@@ -53,6 +54,7 @@ body .list-group-item,
 body .timeline>li>.timeline-panel {
     background: #202940;
     box-shadow: none;
+    border: #004079b0 1px solid
 }
 
 body .card-pricing2 {
